--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,8 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+#
+# CREATE DATABASE ecigs_development CHARACTER SET utf8 COLLATE utf8_general_ci;
 development:
   adapter: mysql2
   encoding: utf8
